css/style.css
@media(min-width: 980px) {
  body {
    padding-top: 60px;
  }
}

.navbar .logo { 
  margin-top: 5px;
  margin-right: 10px;
}

#site-name {
  line-height: 1;
  margin: 0;
}

.submitted {
  margin-bottom: 1em;
  font-style: italic;
  font-weight: normal;
  color: #777;
}

.footer {
  margin-top: 45px;
  padding: 35px 0 36px;
  border-top: 1px solid #E5E5E5;
}
/**
 * Admin Styling
 */

/* Fix Toolbar for .navbar-fixed-top */
body.toolbar .navbar-fixed-top {
 top: 30px;
}

body.toolbar-drawer .navbar-fixed-top {
 top: 65px;
}

@media(min-width: 980px) {
  body.toolbar {
    padding-top: 94px !important;
  }

  body.toolbar-drawer {
    padding-top: 129px !important;
  }
}

html.overlay-open .navbar-fixed-top {
  z-index: 400;
}

/* Admin toolbar fix */
body.admin-expanded.admin-vertical.admin-nw .navbar,
body.admin-expanded.admin-vertical.admin-sw .navbar {
  margin-left: 260px;
}

div#admin-toolbar {
  z-index: 500;
}

/* System base fix */
.container-inline div, .container-inline label {
  display: block;
}

/* Default form fields to auto */
input, textarea, select, .uneditable-input {
  width:auto;
}

/* throbber fix */
html.js input.form-autocomplete {
  background-position: 100% 7px; /* LTR */
  background-repeat: no-repeat;
}

html.js input.throbbing {
  background-position: 100% -13px; /* LTR */
}

.navbar-search .control-group {
  margin-bottom:0px;
}

input.error {
  color: #B94A48;
  border-color: #B94A48;
}

/**
 * Password strength indicator.
 */
.password-strength {
  width: 17em;
  float: right;  /* LTR */
  margin-top: 1.4em;
}

.password-strength-title {
  display: inline;
}

.password-strength-text {
  float: right; /* LTR */
  font-weight: bold;
}

.password-indicator {
  background-color: #C4C4C4;
  height: 0.3em;
  width: 100%;
}

.password-indicator div {
  height: 100%;
  width: 0%;
  background-color: #47C965;
}

input.password-confirm,
input.password-field {
  width: 16em;
  margin-bottom: 0.4em;
}

div.password-confirm {
  float: right;  /* LTR */
  margin-top: 1.5em;
  visibility: hidden;
  width: 17em;
}

div.form-item div.password-suggestions {
  padding: 0.2em 0.5em;
  margin: 0.7em 0;
  width: 38.5em;
  border: 1px solid #B4B4B4;
}

div.password-suggestions ul {
  margin-bottom: 0;
}

.confirm-parent,
.password-parent {
  clear: left; /* LTR */
  margin: 0;
  width: 36.3em;
}

